<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.unit8.pofeaa</groupId>
    <artifactId>pofeaa-reiwa</artifactId>
    <version>0.1.0-SNAPSHOT</version>

    <name>PofEAA REIWA</name>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <yavi.version>0.16.0</yavi.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>3.5.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>2.3.232</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>

        <dependency>
            <groupId>am.ik.yavi</groupId>
            <artifactId>yavi</artifactId>
            <version>${yavi.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jooq</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.4.0</version>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>target/generated-sources/jooq</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <systemPropertyVariables>
                        <org.jooq.no-logo>true</org.jooq.no-logo>
                        <org.jooq.no-tips>true</org.jooq.no-tips>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            
            <!-- SQL Plugin to initialize database for jOOQ generation -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>sql-maven-plugin</artifactId>
                <version>1.5</version>
                
                <dependencies>
                    <dependency>
                        <groupId>com.h2database</groupId>
                        <artifactId>h2</artifactId>
                        <version>2.3.232</version>
                    </dependency>
                </dependencies>
                
                <configuration>
                    <driver>org.h2.Driver</driver>
                    <url>jdbc:h2:./target/jooq-codegen;AUTO_SERVER=TRUE</url>
                    <username>sa</username>
                    <password></password>
                </configuration>
                
                <executions>
                    <execution>
                        <id>create-schema</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>execute</goal>
                        </goals>
                        <configuration>
                            <autocommit>true</autocommit>
                            <srcFiles>
                                <srcFile>src/main/resources/jooq-codegen-schema.sql</srcFile>
                            </srcFiles>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            
            <!-- jOOQ Code Generation Plugin -->
            <plugin>
                <groupId>org.jooq</groupId>
                <artifactId>jooq-codegen-maven</artifactId>
                <version>3.19.10</version>
                
                <executions>
                    <execution>
                        <id>generate-jooq</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <jdbc>
                                <driver>org.h2.Driver</driver>
                                <url>jdbc:h2:./target/jooq-codegen;AUTO_SERVER=TRUE</url>
                                <user>sa</user>
                                <password></password>
                            </jdbc>
                            <generator>
                                <database>
                                    <name>org.jooq.meta.h2.H2Database</name>
                                    <includes>ACCOUNTS|ACTIVITIES</includes>
                                    <excludes></excludes>
                                    <inputSchema>PUBLIC</inputSchema>
                                </database>
                                <generate>
                                    <pojos>true</pojos>
                                    <daos>false</daos>
                                    <records>true</records>
                                    <immutablePojos>false</immutablePojos>
                                    <fluentSetters>true</fluentSetters>
                                </generate>
                                <target>
                                    <packageName>pofeaa.combination.transactionscript.generated</packageName>
                                    <directory>target/generated-sources/jooq</directory>
                                </target>
                            </generator>
                        </configuration>
                    </execution>
                </executions>
                
                <dependencies>
                    <dependency>
                        <groupId>com.h2database</groupId>
                        <artifactId>h2</artifactId>
                        <version>2.3.232</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>
</project>